package com.practice.designpattern.behavioral.memento;

public record EditorState(String content) {
}
